--- a/src/less/bootstrap/bootstarp.less
+++ b/src/less/bootstrap/bootstarp.less
@@ -1,6 +1,9 @@
 
 // Core variables and mixins
 @import "@{bower}bootstrap/less/variables.less";
+
+@import "../variables.less";
+
 @import "@{bower}bootstrap/less/mixins.less";
 
 // Reset and dependencies
