--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,6 +1,8 @@
 doctype html
 html(lang="ru" prefix="og: http://ogp.me/ns#")
 	include includes/head
-	body
-		
+	body.main_page
+		.main_wrapper
+			include includes/header_menu
+			include includes/slider_block
 		include includes/body_scripts
