--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,22 @@
+/* fonts */
 @import "fonts/fonts.less";
+@import "fonts/font_kiostom.less";
+/* bootstrap */
 @import "bootstrap/bootstarp.less";
+/* core */
 @import "reset.less";
+@import "mixins.less";
+/* fancybox */
+@import "fancybox/jquery.fancybox.less";
+@import "fancybox/jquery.fancybox-buttons.less";
+@import "fancybox/jquery.fancybox-thumbs.less";
+/* datetimepicker */
+@import (inline) "@{bower}datetimepicker/jquery.datetimepicker.css";
+/* slick-carousel */
+@import "@{bower}slick-carousel/slick/slick.less";
+@import "slick/slick.less";
+/* site */
+@import "includes/header.less";
+@import "includes/main_menu.less";
+@import "includes/slider_block.less";
+@import "includes/slider_block_form.less";
