--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -1,4 +1,23 @@
+html, body {
+	font-family: 'Arial', serif;
+	font-size: 13px;
+	color: #072e37;
+	height: 100%;
+}
+a {
+	& {
+		color: #0b889f;
+		text-decoration: none;
+		outline: none !important;
+	}
+	&, &:hover, &:focus, &:active {
+		outline: none !important;
+	}
+}
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: @font-family-sans-serif;
-	font-weight: 400;
+	font-family: ElektraPro, Arial, sans-serif;
+	font-weight: 700;
+}
+img {
+	max-width: 100%;
 }
