--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,3 +1,4 @@
 @bower: "../../bower_components/";
 @images:"../images/";
-@font-family-base: "ElektraPro, sans-serif";
+@fancybox:"../vendor/fancybox_v2.1.6/";
+@font-family-base: Arial, sans-serif;
