--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,4 +5,6 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 		.main_wrapper
 			include includes/header_menu
 			include includes/slider_block
+			include includes/main_page_service
+			include includes/main_page_news_actions
 		include includes/body_scripts
