--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,8 +15,12 @@
 /* slick-carousel */
 @import "@{bower}slick-carousel/slick/slick.less";
 @import "slick/slick.less";
+/* animate */
+@import "includes/animate.less";
 /* site */
 @import "includes/header.less";
 @import "includes/main_menu.less";
 @import "includes/slider_block.less";
 @import "includes/slider_block_form.less";
+@import "includes/main_page_service.less";
+@import "includes/main_page_news_actions.less";
