--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,3 +2,9 @@
 @images:"../images/";
 @fancybox:"../vendor/fancybox_v2.1.6/";
 @font-family-base: Arial, sans-serif;
+
+@screen-lg:					1250px; //1220
+@screen-lg-min:				@screen-lg;
+@screen-lg-desktop:			@screen-lg-min;
+@container-large-desktop:	(1190px + @grid-gutter-width);
+@container-lg:				@container-large-desktop;
