--- a/src/jade/includes/main_page_news_actions.jade
+++ b/src/jade/includes/main_page_news_actions.jade
@@ -4,6 +4,8 @@
 			h2.h2
 				|Новости и акции
 			.slider_row
+				.slider_arrows
+					.arrows
 				.slider
 					include news_slide_item
 					include news_slide_item
