--- a/src/jade/includes/main_page_service.jade
+++ b/src/jade/includes/main_page_service.jade
@@ -11,179 +11,24 @@
 					.item
 						.top.text-uppercase
 							img(src="bitrix/templates/frontpage/images/protezirovanie.png" alt="ПРОТЕЗИРОВАНИЕ")
-						.bottom
-							ul
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
+						include rotate_bottom_menu
 				.rotated
 					.item
 						.top.text-uppercase
 							img(src="bitrix/templates/frontpage/images/implantacia.png" alt="ИМПЛАНТАЦИЯ")
-						.bottom
-							ul
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
+						include rotate_bottom_menu
 				.rotated
 					.item
 						.top.text-uppercase
 							img(src="bitrix/templates/frontpage/images/hirurgia.png" alt="ХИРУРГИЧЕСКАЯ СТАМОТОЛОГИЯ")
-						.bottom
-							ul
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
+						include rotate_bottom_menu
 				.rotated
 					.item
 						.top.text-uppercase
 							img(src="bitrix/templates/frontpage/images/lechenie_zubov.png" alt="ЛЕЧЕНИЕ ЗУБОВ")
-						.bottom
-							ul
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
+						include rotate_bottom_menu
 				.rotated
 					.item
 						.top.text-uppercase
 							img(src="bitrix/templates/frontpage/images/otbelivanie.png" alt="ОТБЕЛИВАНИЕ")
-						.bottom
-							ul
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
-								li
-									a(href="javascript:;")
-										|Menu item
+						include rotate_bottom_menu
