--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,4 +7,6 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 			include includes/slider_block
 			include includes/main_page_service
 			include includes/main_page_news_actions
+			include includes/main_page_about
+			include includes/main_page_sertificats
 		include includes/body_scripts
