--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,3 +24,5 @@
 @import "includes/slider_block_form.less";
 @import "includes/main_page_service.less";
 @import "includes/main_page_news_actions.less";
+@import "includes/main_page_about.less";
+@import "includes/main_page_sertificats.less";
