--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -9,4 +9,5 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 			include includes/main_page_news_actions
 			include includes/main_page_about
 			include includes/main_page_sertificats
+			include includes/main_page_footer
 		include includes/body_scripts
