--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,3 +26,4 @@
 @import "includes/main_page_news_actions.less";
 @import "includes/main_page_about.less";
 @import "includes/main_page_sertificats.less";
+@import "includes/main_page_footer.less";
